--- a/index.html
+++ b/index.html
@@ -17,7 +17,28 @@
 <body>
 
     <header>
-        <div>Hello World</div>
+        <nav class="navbar sticky-top navbar-expand-lg bg-dark">
+            <div class="container-fluid navbar">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/images/navlogo.png" class="logo" width="100" height="100" alt="">
+                    <span>The 7 wonders of the modern world</span></a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                </button>
+                <div class="d-lg-flex justify-content-lg-end collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" target="_blank">Places</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <section>
