--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header>
-        <nav class="navbar sticky-top navbar-expand-lg bg-dark">
+        <nav class="navbar sticky-top navbar-expand-lg">
             <div class="container-fluid navbar">
                 <a class="navbar-brand" href="#">
                     <img src="assets/images/navlogo.png" class="logo" width="100" height="100" alt="">
@@ -30,7 +30,7 @@
                 <div class="d-lg-flex justify-content-lg-end collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" target="_blank">Places</a>
