add background image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 </head>
 
 <body>
+    <style>
+        body {
+            background-image: url('assets/images/coliseum.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </style>
 
     <header>
         <nav class="navbar sticky-top navbar-expand-lg">
