section container size adjustment

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <nav class="navbar sticky-top navbar-expand-lg">
             <div class="container-fluid navbar">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="">
                     <img src="assets/images/navlogo.png" class="logo" width="100" height="100" alt="">
                     <span>The 7 wonders of the modern world</span></a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -50,7 +50,9 @@
     </header>
 
     <section>
-        <div class="container-fluid section">Hello World!</div>
+        <div class="container-sm section">
+
+        </div>
     </section>
 
     <footer>
