section container size adjustment

--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
         </nav>
     </header>
 
-    <section>
-        <div class="container-sm section">
+    <section class="container-sm section">
 
-        </div>
     </section>
 
     <footer>
