--- a/index.html
+++ b/index.html
@@ -53,8 +53,15 @@
 
     </section>
 
-    <footer>
-
+    <footer class="container-fluid footer">
+        <div id="footer-items" class="row footer-items">
+            <!--social-links-->
+            <div class="col-sm-12 col-md-12 text-center social">
+                <ul class="list-inline social-links">
+                    
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
