--- a/index.html
+++ b/index.html
@@ -49,17 +49,15 @@
         </nav>
     </header>
 
-    <section class="container-sm section">
+    <section class="container-sm section color-section">
 
     </section>
 
-    <footer class="container-fluid footer">
+    <footer class="container-fluid footer color-default">
         <div id="footer-items" class="row footer-items">
             <!--social-links-->
             <div class="col-sm-12 col-md-12 text-center social">
-                <ul class="list-inline social-links">
-                    
-                </ul>
+                
             </div>
         </div>
     </footer>
