Navbar styling adjustments

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     </style>
 
     <header>
-        <nav class="navbar sticky-top navbar-expand-lg">
+        <nav class="navbar sticky-top navbar-expand-lg color-default">
             <div class="container-fluid navbar">
-                <a class="navbar-brand" href="">
+                <a class="navbar-brand color-default" href="">
                     <img src="assets/images/navlogo.png" class="logo" width="100" height="100" alt="">
                     <span>The 7 wonders of the modern world</span></a>
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler collapsed color-default" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -56,7 +56,7 @@
     <footer class="container-fluid footer color-default">
         <div id="footer-items" class="row footer-items">
             <!--social-links-->
-            <div class="col-sm-12 col-md-12 text-center social">
+            <div class="col-sm-12 col-md-12 text-center social-links">
                 
             </div>
         </div>
