Created footer social links and signature and adjusted the style

--- a/index.html
+++ b/index.html
@@ -54,11 +54,38 @@
     </section>
 
     <footer class="container-fluid footer color-default">
-        <div id="footer-items" class="row footer-items">
-            <!--social-links-->
+        <div class="row footer-items">
             <div class="col-sm-12 col-md-12 text-center social-links">
-                
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a href="https://github.com/brunobdias" target="_blank">
+                            <i class="fab fa-github" aria-hidden="true"></i>
+                            <span class="sr-only">Github</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com/" target="_blank">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/hashtag/" target="_blank">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.youtube.com/" target="_blank">
+                            <i class="fab fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">Youtube</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
+        </div>
+        <div class="col-sm-12 col-md-12 text-center signature">
+            developed by Bruno Dias
         </div>
     </footer>
 
