map commented and some adjustments to create section structure

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
         </nav>
 
     </header>
-
+        
     <section class="container-sm section color-section">
-        <div id="mapid"></div>
+        <!--<div id="mapid" class="map-div"></div> -->
+
     </section>
 
     <footer class="container-fluid footer color-default">
