Creating and Styling places buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 
-
     <title>7 Wonders of Modern World</title>
 </head>
 
@@ -69,10 +68,41 @@
         </nav>
 
     </header>
-        
-    <section class="container-sm section color-section">
-        <!--<div id="mapid" class="map-div"></div> -->
 
+    <section class="container-sm section place-selector color-section text-center">
+        <button type="button" class="btn btn-secondary btn-places mb-1">
+            <img src="assets/images/btnColosseumIco.png" alt="Colosseum">
+            Colosseum
+        </button>
+        <button type="button" class="btn btn-secondary btn-places mb-1">
+            <img src="assets/images/btnChichenIco.png" alt="Chichen Itza">
+            Chichén Itzá
+        </button>
+        <button type="button" class="btn btn-secondary btn-places mb-1">
+            <img src="assets/images/btnMachu-PicchuIco.png" alt="Machu Picchu">
+            Machu Picchu
+        </button>
+        <button type="button" class="btn btn-secondary btn-places mb-1">
+            <img src="assets/images/btnChristIco.png" alt="Christ Redeemer">
+            Christ Redeemer
+        </button>
+        <button type="button" class="btn btn-secondary btn-places mb-1">
+            <img src="assets/images/btnChinaIco.png" alt="The Great Wall">
+            The Great Wall
+        </button>
+        <button type="button" class="btn btn-secondary btn-places mb-1">
+            <img src="assets/images/btnPetraIco.png" alt="Ruins of Petra">
+            Ruins of Petra
+        </button>
+        <button type="button" class="btn btn-secondary btn-places mb-1">
+            <img src="assets/images/btnTaj-MahalIco.png" alt="Taj-Mahal">
+            Taj-Mahal
+        </button>
+    </section>
+
+    <section class="container-sm section content color-section">
+        <!--<div id="mapid" class="map-div"></div> -->
+        <div>test</div>
     </section>
 
     <footer class="container-fluid footer color-default">
