--- a/index.html
+++ b/index.html
@@ -70,31 +70,31 @@
     </header>
 
     <section class="container-sm section place-selector color-section text-center">
-        <button type="button" class="btn btn-secondary btn-places mb-1">
+        <button id="btnColosseum" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnColosseumIco.png" alt="Colosseum">
             Colosseum
         </button>
-        <button type="button" class="btn btn-secondary btn-places mb-1">
+        <button id="btnChichen" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnChichenIco.png" alt="Chichen Itza">
             Chichén Itzá
         </button>
-        <button type="button" class="btn btn-secondary btn-places mb-1">
+        <button id="btnMachuPichu" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnMachu-PicchuIco.png" alt="Machu Picchu">
             Machu Picchu
         </button>
-        <button type="button" class="btn btn-secondary btn-places mb-1">
+        <button id="btnChrist" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnChristIco.png" alt="Christ Redeemer">
             Christ Redeemer
         </button>
-        <button type="button" class="btn btn-secondary btn-places mb-1">
+        <button id="btnGreatWall" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnChinaIco.png" alt="The Great Wall">
             The Great Wall
         </button>
-        <button type="button" class="btn btn-secondary btn-places mb-1">
+        <button id="btnPetra" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnPetraIco.png" alt="Ruins of Petra">
             Ruins of Petra
         </button>
-        <button type="button" class="btn btn-secondary btn-places mb-1">
+        <button id="btnTajMahal" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnTaj-MahalIco.png" alt="Taj-Mahal">
             Taj-Mahal
         </button>
@@ -102,7 +102,7 @@
 
     <section class="container-sm section content color-section">
         <!--<div id="mapid" class="map-div"></div> -->
-        <div>test</div>
+        <div class="test">Hello World</div>
     </section>
 
     <footer class="container-fluid footer color-default">
