Section content colosseum data

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
     </header>
 
+    <!--Section Place Selector -->
     <section class="container-sm section place-selector color-section text-center">
         <button id="btnColosseum" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnColosseumIco.png" alt="Colosseum">
@@ -100,9 +101,28 @@
         </button>
     </section>
 
+    <!--Section Content -->
     <section class="container-sm section content color-section">
         <!--<div id="mapid" class="map-div"></div> -->
-        <div class="test">Hello World</div>
+        <div class="Place Description">
+            <h2>Colosseum</h2>
+            <p>The Flavian Amphitheatre, more commonly known as the Colosseum, stands in the archaeological heart of
+                Rome and welcomes large numbers of visitors daily, attracted by the fascination of its history and its
+                complex architecture.
+
+                The building became known as the Colosseum because of a colossal statue that stood nearby. It was built
+                in the 1st century CE at the behest of the emperors of the Flavian dynasty. Until the end of the ancient
+                period, it was used to present spectacles of great popular appeal, such as animal hunts and gladiatorial
+                games. The building was, and still remains today, a spectacle in itself. It is the largest amphitheatre
+                in the world, capable of presenting surprisingly complex stage machinery, as well as services for
+                spectators.
+
+                A symbol of the splendour of the empire, the Amphitheatre has changed its appearance and its function
+                over the centuries, presenting itself as a structured space but open to the Roman community.</p>
+
+            <div class="col-sm-12 col-md-12 text-center place social-links">
+            </div>
+        </div>
     </section>
 
     <footer class="container-fluid footer color-default">
