--- a/index.html
+++ b/index.html
@@ -121,6 +121,38 @@
                 over the centuries, presenting itself as a structured space but open to the Roman community.</p>
 
             <div class="col-sm-12 col-md-12 text-center place social-links">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a class="place-link" href="https://parcocolosseo.it/en/area/the-colosseum/" target="_blank">
+                            <i class="fas fa-external-link-alt" aria-hidden="true"></i>
+                            <span class="sr-only">Github</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="place-twitter" href="http://www.twitter.com/parcocolosseo" target="_blank">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Github</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="place-instagram" href="http://www.instagram.com/parcocolosseo" target="_blank">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="place-facebook" href="http://www.facebook.com/ParcoColosseo" target="_blank">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="place-youtube" href="http://www.youtube.com/ParcoColosseo" target="_blank">
+                            <i class="fab fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">Youtube</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
