fix screen reader description add and fix colosseum imgs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <style>
         body {
-            background-image: url('assets/images/coliseum.jpg');
+            background-image: url('assets/images/colosseum-lg-bkg.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -120,18 +120,24 @@
                 A symbol of the splendour of the empire, the Amphitheatre has changed its appearance and its function
                 over the centuries, presenting itself as a structured space but open to the Roman community.</p>
 
+            <p>Font <a class="font-link" href="https://parcocolosseo.it/en/area/the-colosseum/"
+                    target="_blank">Colosseum</a>
+            </p>
+            <!--
+            <div class="place-img"><img src="assets/images/colosseum.jpg" alt="colosseum"></div>
+            -->
             <div class="col-sm-12 col-md-12 text-center place social-links">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a class="place-link" href="https://parcocolosseo.it/en/area/the-colosseum/" target="_blank">
                             <i class="fas fa-external-link-alt" aria-hidden="true"></i>
-                            <span class="sr-only">Github</span>
+                            <span class="sr-only">Place Link</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a class="place-twitter" href="http://www.twitter.com/parcocolosseo" target="_blank">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Github</span>
+                            <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
