background imagem removed from html sent to style.css

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 <body>
     <style>
-        body {
+      /*  body {
             background-image: url('assets/images/colosseum-lg-bkg.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
-        }
+        }*/
     </style>
 
     <header>
@@ -105,8 +105,8 @@
     <section class="container-sm section content color-section">
         <!--<div id="mapid" class="map-div"></div> -->
         <div class="Place Description">
-            <h2>Colosseum</h2>
-            <p>The Flavian Amphitheatre, more commonly known as the Colosseum, stands in the archaeological heart of
+            <h2 id="place-h2">Colosseum</h2>
+            <p id="content-p">The Flavian Amphitheatre, more commonly known as the Colosseum, stands in the archaeological heart of
                 Rome and welcomes large numbers of visitors daily, attracted by the fascination of its history and its
                 complex architecture.
 
