--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
             Chichén Itzá
         </button>
         <button id="btnMachuPichu" type="button" class="btn btn-secondary btn-places mb-1">
-            <img src="assets/images/btnMachu-PicchuIco.png" alt="Machu Picchu">
+            <img src="assets/images/btnMachu-PicchuIco.png" alt="Machupicchu">
             Machu Picchu
         </button>
         <button id="btnChrist" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnChristIco.png" alt="Christ Redeemer">
-            Christ Redeemer
+            Christ the Redeemer
         </button>
         <button id="btnGreatWall" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnChinaIco.png" alt="The Great Wall">
-            The Great Wall
+            The Great Wall of China
         </button>
         <button id="btnPetra" type="button" class="btn btn-secondary btn-places mb-1">
             <img src="assets/images/btnPetraIco.png" alt="Ruins of Petra">
@@ -96,23 +96,10 @@
     <section class="container-sm section content color-section">
         <!--<div id="mapid" class="map-div"></div> -->
         <div class="Place Description">
-            <h2 id="place-h2">Colosseum</h2>
-            <p id="content-p">The Flavian Amphitheatre, more commonly known as the Colosseum, stands in the archaeological heart of
-                Rome and welcomes large numbers of visitors daily, attracted by the fascination of its history and its
-                complex architecture.
-
-                The building became known as the Colosseum because of a colossal statue that stood nearby. It was built
-                in the 1st century CE at the behest of the emperors of the Flavian dynasty. Until the end of the ancient
-                period, it was used to present spectacles of great popular appeal, such as animal hunts and gladiatorial
-                games. The building was, and still remains today, a spectacle in itself. It is the largest amphitheatre
-                in the world, capable of presenting surprisingly complex stage machinery, as well as services for
-                spectators.
-
-                A symbol of the splendour of the empire, the Amphitheatre has changed its appearance and its function
-                over the centuries, presenting itself as a structured space but open to the Roman community.</p>
-
-            <p>Font <a class="font-link" href="https://parcocolosseo.it/en/area/the-colosseum/"
-                    target="_blank">Colosseum</a>
+            <h2 id="place-h2"></h2>
+            <p id="content-p"></p>
+            <p>Font <a class="font-link" href=""
+                    target="_blank"></a>
             </p>
             <!--
             <div class="place-img"><img src="assets/images/colosseum.jpg" alt="colosseum"></div>
@@ -120,31 +107,31 @@
             <div class="col-sm-12 col-md-12 text-center place social-links">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a class="place-link" href="https://parcocolosseo.it/en/area/the-colosseum/" target="_blank">
+                        <a class="place-link" href="" target="_blank">
                             <i class="fas fa-external-link-alt" aria-hidden="true"></i>
                             <span class="sr-only">Place Link</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="place-twitter" href="http://www.twitter.com/parcocolosseo" target="_blank">
+                        <a class="place-twitter" href="" target="_blank">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="place-instagram" href="http://www.instagram.com/parcocolosseo" target="_blank">
+                        <a class="place-instagram" href="" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="place-facebook" href="http://www.facebook.com/ParcoColosseo" target="_blank">
+                        <a class="place-facebook" href="" target="_blank">
                             <i class="fab fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="place-youtube" href="http://www.youtube.com/ParcoColosseo" target="_blank">
+                        <a class="place-youtube" href="" target="_blank">
                             <i class="fab fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
