--- a/index.html
+++ b/index.html
@@ -95,11 +95,15 @@
     <!--Section Content -->
     <section class="container-sm section content color-section">
         <!--<div id="mapid" class="map-div"></div> -->
+
+        <!-- <div id="player"></div> -->
+        <div id="player"></div>
+
+
         <div class="Place Description">
             <h2 id="place-h2"></h2>
             <p id="content-p"></p>
-            <p>Font <a class="font-link" href=""
-                    target="_blank"></a>
+            <p>Font <a class="font-link" href="" target="_blank"></a>
             </p>
             <!--
             <div class="place-img"><img src="assets/images/colosseum.jpg" alt="colosseum"></div>
