Fetching data test of RestCountries api, create restCountries.js file

--- a/index.html
+++ b/index.html
@@ -116,8 +116,13 @@
         <div class="Place Description">
             <h2 id="place-h2"></h2>
             <p id="content-p"></p>
-            <p><a class="font-link" href="" target="_blank"></a>
+            <p>Font: 
+                <a class="font-link" href="" target="_blank"></a>
             </p>
+
+            <div id="countries-info" class="country-info">
+
+            </div>
             <!--
             <div class="place-img"><img src="assets/images/colosseum.jpg" alt="colosseum"></div>
             -->
@@ -156,6 +161,7 @@
                 </ul>
             </div>
         </div>
+        
     </section>
 
     <footer class="container-fluid footer color-default">
@@ -207,6 +213,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>    
+    <script src="assets/js/restCountries.js"></script>    
 </body>
 
 </html>
