Implemented new Leaflet map, based on Jym Linx page and Tim Nelson Sample

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                 </li>
                 <li class="list-inline-item">
-                    <div id="mapid" class="map-div"></div>
+                    <div id="map" class="map-div"></div>
                 </li>
             </ul>
         </div>
@@ -214,6 +214,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>    
     <script src="assets/js/restCountries.js"></script>    
+    <script src="assets/js/leaflet.js"></script>
 </body>
 
 </html>
