Add Font to the Data returned from the Api RestCountries

--- a/index.html
+++ b/index.html
@@ -97,9 +97,6 @@
 
     <!--Section Content -->
     <section class="container-sm section content color-section">
-        <!--<div id="mapid" class="map-div"></div> -->
-
-        <!-- <div id="player"></div> -->
         <div class="conainer-sm video-map text-center">
             <ul class="list-inline social-links">
                 <li class="list-inline-item mt-3">
@@ -124,14 +121,16 @@
             <div class="d-grid gap-2">
                 <button id="btnHideContent" type="button" class="btn btn-secondary btn-toggle">Hide Description</button>
             </div>
-            
+
             <div class="d-grid gap-2">
                 <button id="btnShowCountryInfo" type="button" class="btn btn-secondary btn-toggle mt-1">Country
                     Details</button>
             </div>
             <div id="countries-info" class="country-details">
                 <div class="country-info">
-
+                    <p>Font:
+                        <a class="country-font-link" href="" target="_blank"></a>
+                    </p>
                 </div>
             </div>
 
