fix container misspelling

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <!--Section Content -->
     <section class="container-sm section content color-section">
-        <div class="conainer-sm video-map text-center">
+        <div class="container-sm video-map text-center">
             <ul class="list-inline social-links">
                 <li class="list-inline-item mt-3">
                     <div id="player" class="video-div">
