Add Button Roll to Top

--- a/index.html
+++ b/index.html
@@ -172,7 +172,14 @@
                 </ul>
             </div>
         </div>
+    </section>
 
+    <section class="btn-to-top">
+        <!--Credit: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
+        <div class="back-top">
+            <button onclick="topFunction()" id="btnTop" class="btn btn-secondary"
+                title="Go to top">Top</button>
+        </div>
     </section>
 
     <footer class="container-fluid footer color-default">
