Adjusted social-links appearence

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <!--
             <div class="place-img"><img src="assets/images/colosseum.jpg" alt="colosseum"></div>
             -->
-            <div class="col-sm-12 col-md-12 text-center place social-links">
+            <div class="col-sm-12 col-md-12 text-center place social-links mt-2">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a class="place-link" href="" target="_blank">
