Changed back to top button add arrow icon

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
         <!--Credit: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
         <div class="back-top">
             <button onclick="topFunction()" id="btnTop" class="btn btn-secondary"
-                title="Go to top">Top</button>
+                title="Go to top"><i class="fas fa-arrow-up"></i></button>
         </div>
     </section>
     
